created and succesfully connected to main.js

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,6 +31,6 @@
       <p>Cat</p>
     </a>
   </div>
-    <a href="#next" class="waves-effect waves-light btn-large">Next Question</a>
+    <a href="" class="waves-effect waves-light btn-large">Next Question</a>
 </div>
 </div>
