--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,5 +1,7 @@
 <div class="parallax-container">
-  <div class="parallax"><img src="images/image1.jpg" alt="cat and dog snuggling"></div>
+  <div class="parallax">
+    <img src="images/image1.jpg" alt="cat and dog snuggling">
+  </div>
 </div>
 
 <div class="section white" id="questionnaireStart">
@@ -13,14 +15,15 @@
 <div class="section-survey" id="questionnaireHeader">
   <div class="row container center">
     <div class="col m12">
-      <p> - QUESTION <span id="questionNo">1</span> OF 14 - </p>  
-    {{#each questions}}
-        <h4 id="q{{id}}" class="center question">{{question}}</h4>
-    {{/each}}
+      <p> - QUESTION
+        <span id="questionNo">1</span> OF 14 - </p>
+      {{#each questions}}
+        <h4 id="q{{id}}" class="center">{{question}}</h4>
+        {{/each}}
     </div>
   </div>
   <div class="progress">
-      <div class="determinate" style="width: 70%"></div>
+    <div class="determinate" style="width: 70%"></div>
   </div>
 </div>
 
@@ -31,6 +34,5 @@
       <p>Cat</p>
     </a>
   </div>
-    <a href="" class="waves-effect waves-light btn-large">Next Question</a>
-</div>
+  <a href="" class="waves-effect waves-light btn-large">Next Question</a>
 </div>
