--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,6 +6,7 @@
 
 <div class="section white" id="questionnaireStart">
   <div class="row container center">
+    <h1>Pet Finder</h1>
     <p class="header">Make your selection below, and find your perfect pet!</p>
     <a id="questionnaireStart" href="#questionnaireHeader" class="waves-effect waves-light btn-large">Get Started</a>
   </div>
@@ -16,8 +17,9 @@
   <div class="row container center">
     <div class="col m12">
       <p> - QUESTION
-        <span id="questionNo">1</span> OF 14 - </p>
-      {{#each questions}}
+        {{#each questions}}
+        <span id="questionNo">{{id}}</span> OF 14 - </p>
+      
         <h4 id="q{{id}}" class="center">{{question}}</h4>
         {{/each}}
     </div>
