displaying 1 Q at a time

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -64,3 +64,9 @@ img{
     padding: 10px;
     color: #000;
 }
+
+/* Amanda's CSS */
+/* to offset Qs below navbar */
+#questionSection {
+    padding-top: 56px;
+}
