--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -9,6 +9,7 @@
     <link href="../../css/materialize.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="../../css/style.css" type="text/css" rel="stylesheet" media="screen,projection" />
     <link href="../../css/main.css" type="text/css" rel="stylesheet" media="screen,projection" />
+    {{!-- <script src="../../routes/htmlRoutes.js"></script> --}}
     <script src="../../js/main.js"></script>
 
     <title>Pet Finder</title>
