--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -15,7 +15,7 @@
 
 <article id="questionSection">
   {{#each questions}}
-    {{#if showing}}
+    {{!-- {{#if showing}} --}}
   <div class="section-survey">
     <div class="row container center">
       <div class="col m12">
@@ -40,6 +40,6 @@
     </div>
     <a class="waves-effect waves-light btn-large survey-btn" id="next-btn-{{id}}">Next Question</a>
   </div>
-  {{/if}}
+  {{!-- {{/if}} --}}
   {{/each}}
 </article>
