questions/answers saving correctly

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -38,7 +38,7 @@
         </button>
         {{/each}}
       </div>
-      <a class="waves-effect waves-light btn-large survey-btn" id="next-btn-{{id}}">Next Question</a>
+      <a class="waves-effect waves-light btn-large survey-btn survey-answer-btn" id="next-btn-{{id}}">Next Question</a>
     </div>
   </div>
   {{!-- {{/if}} --}} {{/each}}
