drop down scales & zip codes displaying

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -20,7 +20,7 @@
       <div class="row container center">
         <div class="col m12">
           <p> - QUESTION
-            <span id="questionNo">{{questionNo}}</span> OF 14 - </p>
+            <span id="questionNo">{{questionNo}}</span> OF 11 - </p>
           <h4 id="q{{id}}" class="center question show">{{question}}</h4>
         </div>
       </div>
@@ -28,32 +28,53 @@
         <div class="determinate" style="width: {{progress}}"></div>
       </div>
     </div>
-
     <div id="answers" class="row container center">
       <div class="col m12">
-        {{#each answers}} 
-        {{#if autocomplete}}
-          <div class="row">
-            <div class="col s12">
-              <div class="row">
-                <div class="input-field col s12">
-                  <i class="material-icons prefix">textsms</i>
-                  <input type="text" id="autocomplete-input" class="autocomplete">
-                  <label for="autocomplete-input">Autocomplete - click after typing to see matches</label>
-                </div>
-              </div>
-            </div>
+        {{#if selectOption}}
+          <div class="input-field col s12">
+            <select>
+              <option value="" disabled selected>Choose your option</option>
+              {{#each answers}} 
+              <option value={{option}}>{{option}}</option>
+              {{/each}}
+            </select>
+            <label>Materialize Select</label>
           </div>
         {{else}}
-          <button class="btn-large answer-tile" data-ajax={{ajax}}>
-            <img src="/images/{{icon}}" width="100px">
-            <p>{{option}}</p>
-          </button>
-        {{/if}} 
-        {{/each}}
+          {{#each answers}} 
+            {{#if autocomplete}}
+              <div class="row">
+                <div class="col s12">
+                  <div class="row">
+                    <div class="input-field col s12">
+                      <i class="material-icons prefix">textsms</i>
+                      <input type="text" id="autocomplete-input" class="autocomplete">
+                      <label for="autocomplete-input">Autocomplete - click after typing to see matches</label>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            {{else if textBox}}
+              <form class="col s12">
+                <div class="row">
+                  <div class="input-field col s6">
+                    <input placeholder="12345" id="zip_code_{{id}}" type="number" class="validate">
+                    <label for="first_name">Zip Code</label>
+                  </div>
+                </div>
+              </form>
+
+            {{else}}
+              <button class="btn-large answer-tile" data-ajax={{ajax}}>
+                <img src="/images/{{icon}}" width="100px">
+                <p>{{option}}</p>
+              </button>
+            {{/if}} 
+          {{/each}}
+        {{/if}}
+        </div>
+        <a class="waves-effect waves-light btn-large survey-btn survey-answer-btn" id="next-btn-{{id}}">Next Question</a>
       </div>
-      <a class="waves-effect waves-light btn-large survey-btn survey-answer-btn" id="next-btn-{{id}}">Next Question</a>
     </div>
-  </div>
-  {{!-- {{/if}} --}} {{/each}}
+    {{!-- {{/if}} --}} {{/each}}
 </article>
