changed checkbox array to contain keywords from pf response

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,7 +45,7 @@
               {{#each answers}} 
                 <p>
                   <label>
-                    <input type="checkbox" value="option-{{optionNumber}}">
+                    <input type="checkbox" value="{{descriptor}}">
                     <span>{{option}}</span>
                   </label>
                 </p>
