--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -31,7 +31,15 @@
       <div id="answers" class="row container center">
         <div class="col m12">
           {{#if selectOption}}
-            <div class="input-field col s12">
+            {{#each answers}}
+
+             <button id="select-{{id}}" class="btn-large answer-tile" value={{option}}>
+                  <img src="/images/{{icon}}" width="100px">
+                  <p>{{descriptor}}</p>
+              </button>
+            {{/each}}
+
+            {{!-- <div class="input-field col s12">
               <select id="select-{{id}}">
                 <option value="" disabled selected>Choose your option</option>
                 {{#each answers}} 
@@ -39,7 +47,8 @@
                 {{/each}}
               </select>
               <label>Materialize Select</label>
-            </div>
+            </div> --}}
+
           {{else if checkbox}}
             <form action="#">
               {{#each answers}} 
