--- a/public/css/ath.css
+++ b/public/css/ath.css
@@ -1,16 +1,10 @@
-body {
-    background: #222;
-    background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('https://unsplash.it/1200/800/?random');
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-fill-mode: rgba(0,0,0,0.5);
+#userSignInSection {
     display: flex;
     justify-content: center;
     align-items: center;
     height: 100vh;
   }
-  .container {
+  #userSignInBox {
     background: white;
     padding: 20px 25px;
     border: 5px solid #26a69a;
@@ -25,7 +19,7 @@ body {
   radio:required {
     border-color: red;
   }
-  .container {
+  #userSignInBox {
     animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
   }
   
