--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -95,3 +95,44 @@
   {{/each}}
 </ul> --}}
 </article>
+
+{{!-- User SignIn Code --}}
+<section id="userSignInSection">
+  <div class="container" id="userSignInBox">
+      <div class="row">
+          <form class="col s12" id="reg-form">
+            <div class="row">
+              <div class="input-field col s6">
+                <input id="first_name" type="text" class="validate" required>
+                <label for="first_name">First Name</label>
+              </div>
+              <div class="input-field col s6">
+                <input id="last_name" type="text" class="validate" required>
+                <label for="last_name">Last Name</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="email" type="email" class="validate" required>
+                <label for="email">Email</label>
+              </div>
+            </div>
+            <div class="row">
+              <div class="input-field col s12">
+                <input id="password" type="password" class="validate" minlength="6" required>
+                <label for="password">Password</label>
+              </div>
+            </div>
+            <div class="row">
+      
+              <div class="input-field col s6">
+                <button class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action" id="register-btn">Register
+                  <i class="material-icons right">done</i>
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+        <a title="Login" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
+      </div>
+    </section>
