--- a/public/css/main.css
+++ b/public/css/main.css
@@ -61,6 +61,20 @@ img{
     color: #000;
 }
 
+.circle {
+    border-radius: 20%;
+} 
+
+.quicksave {
+    padding: 0 0 0 10px;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.saveImg {
+    margin-top: 10px;
+}
+
 /* Amanda's CSS */
 /* to offset Qs below navbar */
 #questionSection {
