results handlebars added results.js added

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,3 +1,4 @@
+<section class="results hide">
 <div class="parallax-container">
   <div class="parallax"><img src="images/image1.png" alt="cat and dog snuggling"></div>
 </div>
@@ -90,5 +91,7 @@
     $('.modal').modal();
   });
   </script>
+
+</section>
 
   
