--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,7 +14,7 @@
     <link href="../../css/main.css" type="text/css" rel="stylesheet" media="screen,projection" />
     {{!-- <script src="../../routes/htmlRoutes.js"></script> --}}
     <script src="../../js/main.js"></script>
-    <script src="../../js/ath.js"></script>
+    {{!-- <script src="../../js/ath.js"></script> --}}
 
     <title>Pet Finder</title>
 </head>
