--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -15,7 +15,7 @@
     {{!-- <script src="../../routes/htmlRoutes.js"></script> --}}
     <script src="../../js/main.js"></script>
     <script src="../../js/ath.js"></script>
-
+    <link rel="shortcut icon" type="image/jpg" href="images/logo.png">
     <title>Pet Finder</title>
 </head>
 
