--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
   </div>
   <div class="section white">
     <div class="row container center">
-      <h1>Pet Finder</h1>
+      <h1>Pet Cupid</h1>
       <p class="header">Make your selection below, and find your perfect pet!</p>
       <a href="#questionSection" class="waves-effect waves-light btn-large survey-btn">Get Started</a>
     </div>
@@ -92,7 +92,7 @@
     {{/each}}
 </article>
     
-{{!-- Results Handlebar Page Default Hidden --}}
+{{!-- Results Handlebar Page Default Hidden
 <section id="results" class="hide">
 <div class="parallax-container">
   <div class="parallax"><img src="images/doggies.png" alt="cat and dog snuggling"></div>
@@ -127,8 +127,10 @@
         </div>
     </div>
 </div>
+</section> --}}
 
-  <!-- Modal Structure -->
+
+  {{!-- <!-- Modal Structure Quick Save -->
 <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
       <h4>Saved Pets</h4>
@@ -149,19 +151,10 @@
           </div> 
         {{/each}}
     </div>
-</div>
-
-
-  <script>
-    $(document).ready(function(){
-    $('.modal').modal();
-  });
-  </script>
-
-</section>
+</div> --}}
 
 {{!-- User SignIn Code --}}
-<section id="userSignInSection" class="hide modal bottom-sheet">
+{{!-- <section id="userSignInSection" class="hide modal bottom-sheet">
   <div class="container" id="userSignInBox">
       <div class="row">
           <form class="col s12" id="reg-form">
@@ -199,4 +192,5 @@
         </div>
         <a title="Login" class="ngl btn-floating btn-large waves-effect waves-light red"><i class="material-icons">input</i></a>
       </div>
-    </section>
+    </section> --}}
+
