--- a/public/css/ath.css
+++ b/public/css/ath.css
@@ -8,24 +8,23 @@
     left: 0;
     z-index: 10;
   } */
-  #userSignInBox {
-    /* background: white; */
+  /* #userSignInBox {
     padding: 20px 25px;
     border: 5px solid #26a69a;
     width: 550px;
     height: auto;
     box-sizing: border-box;
     position: relative;
-  }
+  } */
   .col.s6 > .btn {
      width: 100%;
   }
   radio:required {
     border-color: red;
   }
-  #userSignInBox {
+  /* #userSignInBox {
     animation: showUp 0.5s cubic-bezier(0.18, 1.3, 1, 1) forwards;
-  }
+  } */
   
   @keyframes showUp {
     0% {
