--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,26 +1,17 @@
-<section id="results">
-<div class="parallax-container">
-  <div class="parallax"><img src="images/doggies.png" alt="cat and dog snuggling"></div>
-</div>
+<header>
+  <div class="parallax-container">
+    <div class="parallax">
+      <img src="images/image1.png" alt="cat and dog snuggling">
+    </div>
+  </div>
 
-
-    
-<section id="reload">
-  <div class="container">
-  <h1>Thanks for visting Pets Cupid.com. We are glad to lksdjflsdjflksdjlfkdjflsdjfkdjflkdsjflskdjflsdjlkfjsdlkfjsdlfjldskjflkdsjflkdsjfklsdjflksdjflksd</h1>
-  <input id="reloadBtn" type="submit" value="Refresh Page" onClick="window.location.reload()">
-  {{!-- <a class="waves-effect waves-light btn-large" id="reloadBtn">See your results.</a> --}}
-</div>
-</section>
-
-
-<div class="section white results-section">
+<div class="section white saved-section">
     <div class="row container center">
         <div class="row container center">
           
-              <h3>Top Results</h3>
+              <h3>My Pets</h3>
 
-          {{#each results}}
+          {{#each saved}}
             <div class="col s12">
                 <div class="card horizontal">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -43,4 +34,5 @@
         </div>
     </div>
 </div>
-</section>
+</header>
+
