--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -25,7 +25,7 @@
     <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
     <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
     <li class="divider"></li>
-    <li><a href="#!">My Pets</a></li>
+    <li><a href="/saved">My Pets</a></li>
 </ul>
 
   <nav class="white" role="navigation">
@@ -39,7 +39,7 @@
         <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
         <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
         <li class="divider"></li>
-        <li><a href="#!">My Pets</a></li>
+        <li><a href="/saved">My Pets</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
