--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -142,7 +142,12 @@
         $(".dropdown-trigger").dropdown();
         $('.sidenav').sidenav();
         $('.modal').modal();
+
+        $('#closemodal').click(function() {
+        $('#modalwindow').modal('hide');
+});
     });
+});
 </script>
 
 
