--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -10,8 +10,7 @@
         <div class="row container center">
           
               <h3>My Pets</h3>
-
-          {{#each saved}}
+          {{#each results}}
             <div class="col s12">
                 <div class="card horizontal">
                     <div class="card-image waves-effect waves-block waves-light">
@@ -20,7 +19,7 @@
 
                     <div class="card-content">
                         <span class="card-title activator grey-text text-darken-4">{{name}}</span>
-                        <p><a href="#">Link to petfind url</a></p>
+                        <p><a target="_blank" href="{{url}}">PetFinder Url</a></p>
                     </div>
 
                     <div class="card-reveal">
