KV most updated changes made

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,15 +1,14 @@
 <header>
   <div class="parallax-container">
     <div class="parallax">
-      <img src="images/image1.png" alt="cat and dog snuggling">
+      <img src="images/save.png" alt="cat and dog snuggling">
     </div>
   </div>
 
 <div class="section white saved-section">
     <div class="row container center">
-        <div class="row container center">
-          
-              <h3>My Pets</h3>
+        <div class="row container center">     
+        <h3>My Pets</h3>
           {{#each results}}
             <div class="col s12">
                 <div class="card horizontal">
