--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -6,14 +6,14 @@
 <section id="reload">
   <div class="container">
   <h1>Thanks for visting <span style="color:rgb(63, 70, 158); font-weight: 400;">Pets Cupid.com.</span> We are glad to provide you with your top pet matches and hope that our pets can find a home with you.</h1>
-  <a id="reloadBtn" class="waves-effect waves-light btn-large" type="submit" value="See your Results">See your Results</a>
+  <input id="reloadBtn" class="waves-effect waves-light btn-large" type="submit" value="See your Results" onClick="window.location.reload()">
 </div>
 </section>
 
 <div class="section white results-section">
     <div class="row container center">
         <div class="row container center">
-              <h3 id="tab2">Top Results</h3>
+              
           {{#each results}}
             <div class="col s12">
                 <div class="card horizontal">
@@ -37,4 +37,5 @@
         </div>
     </div>
 </div>
+
 </section>
