--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,37 +1,40 @@
 <header>
-  <div class="parallax-container">
-    <div class="parallax">
-      <img src="images/image1.png" alt="cat and dog snuggling">
-    </div>
-  </div>
-
-<div class="section white saved-section">
-    <div class="row container center">
-        <div class="row container center">
-          
-              <h3>My Pets</h3>
-          {{#each results}}
-            <div class="col s12">
-                <div class="card horizontal">
-                    <div class="card-image waves-effect waves-block waves-light">
-                        <img class= "activator" src="{{largePhoto}}">
-                    </div>
-
-                    <div class="card-content">
-                        <span class="card-title activator grey-text text-darken-4">{{name}}</span>
-                        <p><a target="_blank" href="{{url}}">PetFinder Url</a></p>
-                    </div>
-
-                    <div class="card-reveal">
-                        <span class="card-title grey-text text-darken-4">{{name}}<i class="material-icons right">close</i></span>
-                        <p>{{about}}</p>
-                        <a class="waves-effect waves-light btn modal-trigger save-btn" href="#userSignInSection" id="id{{petID}}">Save</a>
-                    </div>
-                </div>
-            </div>
-             {{/each}}
+    <div class="parallax-container">
+        <div class="parallax">
+            <img src="images/image1.png" alt="cat and dog snuggling">
         </div>
     </div>
-</div>
-</header>
 
+    <div class="section white saved-section">
+        <div class="row container center">
+            <div class="row container center">
+
+                <h3>My Pets</h3>
+                {{#each saved}}
+                <div class="col s12">
+                    <div class="card horizontal">
+                        <div class="card-image waves-effect waves-block waves-light">
+                            <img class="activator" src="{{largePhoto}}">
+                        </div>
+
+                        <div class="card-content">
+                            <span class="card-title activator grey-text text-darken-4">{{name}}</span>
+                            <p>
+                                <a target="_blank" href="{{url}}">PetFinder Url</a>
+                            </p>
+                        </div>
+
+                        <div class="card-reveal">
+                            <span class="card-title grey-text text-darken-4">{{name}}
+                                <i class="material-icons right">close</i>
+                            </span>
+                            <p>{{about}}</p>
+                            <a class="waves-effect waves-light btn modal-trigger save-btn" href="#userSignInSection" id="id{{petID}}">Save</a>
+                        </div>
+                    </div>
+                </div>
+                {{/each}}
+            </div>
+        </div>
+    </div>
+</header>
