Modal close after clicking button now

--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,4 +1,4 @@
-<section id="results">
+<main id="results">
 <div class="parallax-container">
   <div class="parallax"><img src="images/doggies.png" alt="cat and dog snuggling"></div>
 </div>
@@ -38,4 +38,4 @@
     </div>
 </div>
 
-</section>
+</main>
