--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -1,4 +1,4 @@
-<header>
+<main>
   <div class="parallax-container">
     <div class="parallax">
       <img src="images/save.png" alt="cat and dog snuggling">
@@ -9,6 +9,7 @@
     <div class="row container center">
         <div class="row container center">     
         <h3>My Pets</h3>
+        <p>Please sign in to acces your saved pets.</p>
           {{#each results}}
             <div class="col s12">
                 <div class="card horizontal">
@@ -32,5 +33,5 @@
         </div>
     </div>
 </div>
-</header>
+</main>
 
