--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,3 +1,4 @@
+<main>
 <header id="questionnaireStart">
   <div class="parallax-container">
     <div class="parallax">
@@ -91,6 +92,7 @@
       </div>
     {{/each}}
 </article>
+</main>
 
 {{!-- Results Handlebar Page Default Hidden
 <section id="results" class="hide">
