--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -105,7 +105,7 @@
             <div class="row">
       
               <div class="input-field col s6">
-                <a class="btn btn-large btn-register waves-effect waves-light" type="submit" id="register-btn">Register
+                <a class="btn btn-large btn-register waves-effect waves-light" type="submit" name="action" id="register-btn">Register
                   <i class="material-icons right">done</i>
                 </a>
               </div>
