--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -1,4 +1,4 @@
-<section id="results" class="hide">
+<section id="results">
 <div class="parallax-container">
   <div class="parallax"><img src="images/doggies.png" alt="cat and dog snuggling"></div>
 </div>
