--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -115,11 +115,11 @@
   </div>
 
 <!-- Modal Structure Quick Save -->
-<div id="modal1" class="modal bottom-sheet">
+{{!-- <div id="modal1" class="modal bottom-sheet">
     <div class="modal-content">
       <h4>Saved Pets</h4>
         {{#each results}}
-           <div class="col s12 m8 offset-m2 l6 offset-l3 hide" id="mid{{petID}}">
+           <div class="col s12 m8 offset-m2 l6 offset-l3 hide" id="mid{{petId}}">
             <div class="card-panel grey lighten-5 z-depth-1 quicksave">
               <div class="row valign-wrapper">
                 <div class="col s2">
@@ -135,7 +135,7 @@
           </div> 
         {{/each}}
     </div>
-</div>
+</div> --}}
 
 <script>
     $(document).ready(function(){
