--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -9,7 +9,7 @@
     <div class="row container center">
         <div class="row container center">     
         <h3>My Pets</h3>
-        <p>Please sign in to acces your saved pets.</p>
+        <p>Please sign in to access your saved pets.</p>
           {{#each results}}
             <div class="col s12">
                 <div class="card horizontal">
