just need to pull ids from database for saved

--- a/views/saved.handlebars
+++ b/views/saved.handlebars
@@ -10,7 +10,7 @@
         <div class="row container center">     
         <h3>My Pets</h3>
         <p>Please sign in to access your saved pets.</p>
-          {{#each results}}
+          {{#each saved}}
             <div class="col s12">
                 <div class="card horizontal">
                     <div class="card-image waves-effect waves-block waves-light">
