--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,6 +24,7 @@
     <!-- Modal Trigger -->
     <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
     <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
+    <li><a class="waves-effect waves-light modal-trigger" href="#signOut">Sign Out</a>
     <li class="divider"></li>
     <li><a href="/saved">My Pets</a></li>
 </ul>
