--- a/views/results.handlebars
+++ b/views/results.handlebars
@@ -29,7 +29,7 @@
                     <div class="card-reveal">
                         <span class="card-title grey-text text-darken-4">{{name}}<i class="material-icons right">close</i></span>
                         <p>{{about}}</p>
-                        <a class="waves-effect waves-light btn modal-trigger save-btn" href="" id="id{{petId}}">Save</a>
+                        <a class="waves-effect waves-light btn save-btn modal-trigger" id="id{{petId}}" href="#userSignInSection">Save</a>
                     </div>
                 </div>
             </div>
@@ -39,3 +39,5 @@
 </div>
 
 </main>
+
+{{!-- taken out of save a -> href="#userSignInSection" modal-trigger --}}
