--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,7 +24,7 @@
     <!-- Modal Trigger -->
     <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
     <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
-    <li><a class="waves-effect waves-light modal-trigger" href="#signOut">Sign Out</a>
+    <li><a id="signOut" class="waves-effect waves-light">Sign Out</a>
     <li class="divider"></li>
     <li><a href="/saved">My Pets</a></li>
 </ul>
@@ -39,6 +39,7 @@
       <ul id="nav-mobile" class="sidenav">
         <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
         <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
+        <li><a id="signOut" class="waves-effect waves-light">Sign Out</a>
         <li class="divider"></li>
         <li><a href="/saved">My Pets</a></li>
       </ul>
