--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,11 +22,11 @@
 <!-- DropDown -->
 <ul id="dropdown1" class="dropdown-content">
     <!-- Modal Trigger -->
-    <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
-    <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
-    <li><a class="waves-effect waves-light modal-trigger" href="#signOut">Sign Out</a>
+    <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a></li>
+    <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a></li>
+    <li><a class="waves-effect waves-light modal-trigger" href="#signOut">Sign Out</a></li>
     <li class="divider"></li>
-    <li><a href="/saved">My Pets</a></li>
+    <li><a href="/saved" id="viewSavedPetsBtn">My Pets</a></li>
 </ul>
 
   <nav class="white" role="navigation">
@@ -40,7 +40,7 @@
         <li><a class="waves-effect waves-light modal-trigger" href="#returnUser" style="font:bolder">Sign In</a>
         <li><a class="waves-effect waves-light modal-trigger" href="#userSignInSection" style="font-size:14px">Create an Account</a>
         <li class="divider"></li>
-        <li><a href="/saved">My Pets</a></li>
+        <li><a href="/saved" id="viewSavedPetsBtn">My Pets</a></li>
       </ul>
       <a href="#" data-target="nav-mobile" class="sidenav-trigger"><i class="material-icons">menu</i></a>
     </div>
